--- a/pub/package.json
+++ b/pub/package.json
@@ -2,7 +2,9 @@
   "author": "Corno",
   "bin": {},
   "dependencies": {
-    "api-astn-escape-string": "^0.3.0"
+    "api-astn-escape-string": "^0.3.0",
+    "pareto-core": "^0.0.4",
+    "pareto-core-internals": "^0.9.0"
   },
   "files": [
     "dist",
@@ -23,5 +25,5 @@
   },
   "types": "dist/index.d.ts",
   "version": "0.3.0",
-  "content-fingerprint": "9757acffeff8696110a3fd78462c5f364879bc9f"
+  "content-fingerprint": "af5cc033cd7a39e26d1a6850458313ca7d5bf3dd"
 }
