--- a/pub/package.json
+++ b/pub/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "res-astn-escape-string",
   "author": "Corno",
   "license": "ISC",
   "description": "resource for escaping ASTN strings",
+
   "dependencies": {
     "glo-pareto-common": "^0.10.0",
     "pareto-core-internals": "^0.11.0"
@@ -11,11 +11,8 @@
     "dist"
   ],
   "repository": {
-    "type": "git",
-    "url": "http://github.com/corno/XXXX.git"
+    "type": "git"
   },
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "version": "0.4.0",
-  "content-fingerprint": "60d2f6602684985a930f03e8cc2d4b7748cbf379"
+  "types": "dist/index.d.ts"
 }
