--- a/pub/package.json
+++ b/pub/package.json
@@ -2,7 +2,6 @@
   "author": "Corno",
   "license": "ISC",
   "description": "resource for escaping ASTN strings",
-
   "dependencies": {
     "glo-pareto-common": "^0.11.0",
     "pareto-core-internals": "^0.11.1"
@@ -11,8 +10,12 @@
     "dist"
   ],
   "repository": {
-    "type": "git"
+    "type": "git",
+    "url": "http://github.com/corno/res-astn-escape-string.git"
   },
   "main": "dist/index.js",
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "name": "res-astn-escape-string",
+  "version": "0.5.0",
+  "content-fingerprint": "2afad0f865759f31937ea9af2bce67f22b4e5092"
 }
