--- a/pub/package.json
+++ b/pub/package.json
@@ -2,20 +2,17 @@
   "author": "Corno",
   "license": "ISC",
   "description": "resource for escaping ASTN strings",
+
   "dependencies": {
-    "glo-pareto-common": "^0.12.0",
-    "pareto-core-internals": "^0.11.1"
+    "glo-pareto-common": "^0.0.0",
+    "pareto-core-internals": "^0.0.0"
   },
   "files": [
     "dist"
   ],
   "repository": {
-    "type": "git",
-    "url": "http://github.com/corno/res-astn-escape-string.git"
+    "type": "git"
   },
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "name": "res-astn-escape-string",
-  "version": "0.6.0",
-  "content-fingerprint": "983ce31f22a4673ec83074aa73fdb4322c4a916f"
+  "types": "dist/index.d.ts"
 }
